rendered/envs/alpha/httpbingo/deployment-httpbingo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: httpbingo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: httpbingo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: httpbingo
    spec:
      containers:
        - image: index.docker.io/mccutchen/go-httpbin@sha256:20739736d4eb8dc1b998dff701f437b8bd62dcc46492bd0d861e89890ca36500
          name: httpbingo
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            privileged: false
