rendered/envs/alpha/httpbingo/service-httpbingo.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  labels:
    app.kubernetes.io/instance: httpbingo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: httpbingo
    app.kubernetes.io/version: v2.2.2
    helm.sh/chart: httpbingo-0.1.1
  name: httpbingo
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: httpbingo
    app.kubernetes.io/name: httpbingo
  type: ClusterIP
