rendered/envs/alpha/httpbingo/ingress-httpbingo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: httpbingo
spec:
  rules:
    - host: httpbingo.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: httpbingo
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: httpbingo.junior.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: httpbingo
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: httpbingo.ts.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: httpbingo
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: httpbingo.junior.ts.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: httpbingo
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: httpbingo.lan.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: httpbingo
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: httpbingo.junior.lan.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: httpbingo
                port:
                  name: http
            path: /
            pathType: Prefix
