rendered/envs/alpha/httpbingo/ingressroute-httpbingo-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: httpbingo-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`httpbingo.lan.zebradil.dev`) || Host(`httpbingo.gray.lan.zebradil.dev`) || Host(`httpbingo.junior.lan.zebradil.dev`)
      services:
        - name: httpbingo
          port: http
