rendered/envs/alpha/httpbingo/ingressroute-httpbingo-protected.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: httpbingo-protected
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`httpbingo.zebradil.dev`) || Host(`httpbingo.gray.zebradil.dev`) || Host(`httpbingo.junior.zebradil.dev`)
      middlewares:
        - name: chain-authelia-auth
          namespace: authelia
      services:
        - name: httpbingo
          port: http
