rendered/envs/alpha/httpbingo/ingressroute-httpbingo.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: httpbingo
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`httpbingo.ts.zebradil.dev`) || Host(`httpbingo.gray.ts.zebradil.dev`) || Host(`httpbingo.junior.ts.zebradil.dev`)
      services:
        - name: httpbingo
          port: http
